force-app/main/default/objects/PBS_GREX_Project_EOI__c/PBS_GREX_Project_EOI__c.object-meta.xml
<CustomObject>
    <description>Project and Expression of Interest data received from GREX</description>
    <label>GREX Project EOI</label>
    <nameField>
        <label>GREX EOI ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GREX Project EOIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>