force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_ABOA__c.field-meta.xml
<CustomField>
    <fullName>Project_ABOA__c</fullName>
    <description>Project ABOA received from GREX</description>
    <label>Project ABOA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>