force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_City__c.field-meta.xml
<CustomField>
    <fullName>Project_City__c</fullName>
    <description>Project City: Data received from GREX</description>
    <inlineHelpText>Project City: Data received from GREX</inlineHelpText>
    <label>Project City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>