force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Contact_Email__c</fullName>
    <description>GSA Contact Email addressed: Received from GREX</description>
    <inlineHelpText>GSA Contact Email addressed: Received from GREX</inlineHelpText>
    <label>Project Contact Email</label>
    <type>Email</type>
</CustomField>