force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_Due_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Project_Due_Timezone__c</fullName>
    <description>Offer due timezone. TBD if we should use this</description>
    <label>Project Due Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(UTC-04:00) Atlantic Time (Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-05:00) Eastern Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-06:00) Central Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-07:00) Mountain Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC-08:00) Pacific Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>(UTC+10:00) Guam, Port Moresby</fullName>
            </value>
            <value>
                <fullName>(UTC-10:00) Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>