force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_EOI_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_EOI_ID__c</fullName>
    <description>Project Expression of Interest ID: This is a unique ID eceived from GREX</description>
    <externalId>true</externalId>
    <inlineHelpText>Project Expression of Interest ID: Received from GREX</inlineHelpText>
    <label>Project EOI ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>