force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <description>GREX Project Number</description>
    <inlineHelpText>GREX Project Number</inlineHelpText>
    <label>Project Number</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>