force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_Offer_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Offer_Due_Date__c</fullName>
    <description>Offer Due Date/Time as received from GREX</description>
    <inlineHelpText>Offer Due Date/Time  as received from GREX</inlineHelpText>
    <label>Project Offer Due Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>