force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <description>2 character state code received from GREX</description>
    <label>Project State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>