force-app/main/default/objects/PBS_GREX_Project_EOI__c/fields/Project_Termination_Flag__c.field-meta.xml
<CustomField>
    <fullName>Project_Termination_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True flag indicates that the project is terminated and offers will no longer be received by GREX.</description>
    <label>Project Termination Flag</label>
    <type>Checkbox</type>
</CustomField>