force-app/main/default/objects/PBS_GREX_Project_EOI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project_Number__c</columns>
    <columns>Project_EOI_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Project_Contact_Email__c</columns>
    <columns>Project_Due_Timezone__c</columns>
    <columns>Project_ABOA__c</columns>
    <columns>Project_City__c</columns>
    <columns>Project_Lease_Model__c</columns>
    <columns>Project_Offer_Due_Date__c</columns>
    <columns>Project_State__c</columns>
    <columns>Project_Termination_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>